# erza

./: .gitignore  .vercelignore  AGENTS.md  CHAT_SURFACES_SPEC.md  EXAMPLE.md  FORMS_SPEC.md  PRODUCT_SPEC.md  README.md  SKILLS.md  main.py  package-lock.json  package.json  push_release_upgrade.sh  pyproject.toml  update_docs.sh
app/: README.md  cli_contract.toml  erza.py  install.sh  layout.js  main.py  page.js  pyproject.toml  requirements.txt
app/examples/animation/: index.erza
app/examples/docs/: index.erza
app/examples/docs/backend/: index.erza
app/examples/docs/components/: index.erza
app/examples/docs/examples/: index.erza
app/examples/docs/first-file/: index.erza
app/examples/docs/first-run/: index.erza
app/examples/docs/install/: index.erza
app/examples/docs/labs/: index.erza
app/examples/docs/patterns/: index.erza
app/examples/docs/protocol/: index.erza
app/examples/docs/reference/: index.erza
app/examples/forms/: backend.py  done.erza  index.erza
app/examples/greetings/: app.erza  backend.py  index.erza
app/examples/landing/: index.erza
app/examples/tasks/: app.erza  backend.py
app/labs/: page.js
app/src/erza/: __init__.py  __main__.py  backend.py  chat.py  cli.py  docs_builder.py  input_edit.py  local_server.py  model.py  parser.py  remote.py  runtime.py  source.py  template.py
app/tests/: __init__.py  _test_bootstrap.py  test_chat.py  test_cli.py  test_docs_build.py  test_forms.py  test_install_contract.py  test_main.py  test_parser.py  test_remote.py  test_runtime.py  test_template.py
docs_website/: next.config.mjs  (+2 more)
(+75 files in other folders)
