[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "erza"
version = "0.0.1"
description = "v0 terminal-native prototype runtime for erza components"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
erza = "erza.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
