[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "erza"
dynamic = ["version"]
description = "v0 terminal-native prototype runtime for erza components"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
erza = "erza.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = ["_version"]

[tool.setuptools.dynamic]
version = {attr = "_version.__version__"}
